--- a/my_food/templates/my_food/add_recipe.html
+++ b/my_food/templates/my_food/add_recipe.html
@@ -1,13 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <form method="POST">{% csrf_token %}
-       {{ form.as_p }}
-       <button type="submit">Save</button>
-   </form>
-</body>
-</html>
+{% extends "my_food/base.html" %}
+{% block title %} My_food - добавить рецепт {% endblock %}
+{% block content %}
+
+    <div class="content">
+        <form action='.' method="POST"> {% csrf_token %}
+                <div class="form-group">
+                    <label for="title">Название</label>
+                    <input type="text" class="form-control" id="title" placeholder="Название" name="title">
+                </div>
+            <div class="form-group">
+                <label for="ingredients">Ингридиенты</label>
+                <textarea class="form-control" id="ingredients" placeholder="" name="ingredients" rows="3"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="description">Краткое описание</label>
+                    <input type="text" class="form-control" id="description" placeholder="Описание" name="description">
+            </div>
+            <div class="form-group">
+                <label for="text_recipe">Текст рецепта</label>
+                <textarea class="form-control" id="text_recipe" placeholder="" name="text_recipe" rows="16"></textarea>
+            </div>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="img_main">
+                <label class="custom-file-label" for="customFile">Выберите главное фото</label>
+            </div>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="img1">
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="img2">
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="img3">
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Сохранить</button>
+        </form>
+    </div>
+{% endblock %}
