--- a/my_food/templates/my_food/login.html
+++ b/my_food/templates/my_food/login.html
@@ -2,22 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My_food - Вход</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        #sign{
+            display: -ms-flexbox;
+            display: -webkit-box;
+            display: flex;
+            -ms-flex-align: center;
+            -ms-flex-pack: center;
+            -webkit-box-align: center;
+            align-items: center;
+            -webkit-box-pack: center;
+            justify-content: center;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #f5f5f5;
+            height: 100%;
+}
+
+        .form-signin {
+            width: 100%;
+              max-width: 330px;
+              padding: 15px;
+              margin: 0 auto;
+        }
+        .form-signin .form-control {
+              position: relative;
+              box-sizing: border-box;
+              height: auto;
+              padding: 10px;
+              font-size: 16px;
+        }
+        .form-signin .form-control:focus {
+              z-index: 2;
+        }
+        .form-signin input[type="text"] {
+              margin-bottom: -1px;
+              border-bottom-right-radius: 0;
+              border-bottom-left-radius: 0;
+        }
+            .form-signin input[type="password"] {
+              margin-bottom: 10px;
+              border-top-left-radius: 0;
+              border-top-right-radius: 0;
+        }
+
+    </style>
 </head>
-<body>
- {% if form.errors %}
-    <p class="error">Сожалеем, вы неправильно ввели логин или пароль</p>
-  {% endif %}
-
-  <form action='.' method='POST'> {% csrf_token %}
-    <label for="username">Логин:</label>
-    <input type="text" name="username" value="" id="username">
-    <label for="password">Пароль:</label>
-    <input type="password" name="password" value="" id="password">
-
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="food" />
-  </form>
+<body class="text-center" id="sign">
+    <form class="form-signin" action='.' method="POST"> {% csrf_token %}
+        <h1 class="h3 mb-3 font-weight-normal">Вход</h1>
+        <label for="username" class="sr-only">Login</label>
+        <input type="text" id="username" class="form-control" placeholder="Login" required="" autofocus="" name="username">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" name="password">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+        <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+    </form>
 
 </body>
 </html>
