--- a/my_food/templates/my_food/base.html
+++ b/my_food/templates/my_food/base.html
@@ -77,6 +77,12 @@
         p{
             font-size: 15pt;
         }
+        .comment{
+            clear: both;
+        }
+        .comment label{
+            font-size: 18pt;
+        }
     </style>
 </head>
 <body>
