--- a/my_food/templates/my_food/food.html
+++ b/my_food/templates/my_food/food.html
@@ -10,6 +10,7 @@
     </div>
     <div class="ing">
         <h2>Продукты</h2>
+        {% if ingredients %}
         <ul class="list-group list-group-flush">
             {% for ingredient in ingredients %}
                 <li class="list-group-item">
@@ -20,6 +21,9 @@
                 </li>
             {% endfor %}
         </ul>
+        {% else %}
+            <p>Вы еще не добавили ни одного продукта</p>
+        {% endif %}
     </div>
 
 {% endblock %}
