--- a/my_food/templates/my_food/add_recipe.html
+++ b/my_food/templates/my_food/add_recipe.html
@@ -6,34 +6,35 @@
         <form action='.' method="POST" enctype="multipart/form-data"> {% csrf_token %}
                 <div class="form-group">
                     <label for="title">Название</label>
-                    <input type="text" class="form-control" id="title" placeholder="Название" name="title">
+                    {{ form.title }}
                 </div>
             <div class="form-group">
-                <label for="ingredients">Ингридиенты</label>
-                <textarea class="form-control" id="ingredients" placeholder="" name="ingredients" rows="3"></textarea>
+                <label for="ingredients">Ингредиенты</label>
+                <h6>*Пишите ингредиенты через запятую без указания количества</h6>
+                {{ form.ingredients }}
             </div>
             <div class="form-group">
                     <label for="description">Краткое описание</label>
-                    <input type="text" class="form-control" id="description" placeholder="Описание" name="description">
+                {{ form.description }}
             </div>
             <div class="form-group">
                 <label for="text_recipe">Текст рецепта</label>
-                <textarea class="form-control" id="text_recipe" placeholder="" name="text_recipe" rows="16"></textarea>
+                {{ form.text_recipe }}
             </div>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" name="img_main">
+                {{ form.img_main }}
                 <label class="custom-file-label" for="customFile">Выберите главное фото</label>
             </div>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" name="img1">
+                {{ form.img1 }}
                 <label class="custom-file-label" for="customFile">Выберите фото</label>
             </div>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" name="img2">
+                {{ form.img2 }}
                 <label class="custom-file-label" for="customFile">Выберите фото</label>
             </div>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" name="img3">
+                {{ form.img3 }}
                 <label class="custom-file-label" for="customFile">Выберите фото</label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Сохранить</button>
