--- a/my_food/templates/my_food/edit_recipe.html
+++ b/my_food/templates/my_food/edit_recipe.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "my_food/base.html" %}
+{% block title %} My_food - редактирование {% endblock %}
+{% block content %}
+<div class="content">
+        <form action='.' method="POST" enctype="multipart/form-data"> {% csrf_token %}
+               <div class="form-group">
+                    <label for="title">Название</label>
+                    {{ form.title }}
+                </div>
+            <div class="form-group">
+                <label for="ingredients">Ингредиенты</label>
+                <h6>*Пишите ингредиенты через запятую без указания количества</h6>
+                {{ form.ingredients }}
+            </div>
+            <div class="form-group">
+                    <label for="description">Краткое описание</label>
+                {{ form.description }}
+            </div>
+            <div class="form-group">
+                <label for="text_recipe">Текст рецепта</label>
+                {{ form.text_recipe }}
+            </div>
+            <div class="custom-file">
+                {{ form.img_main }}
+                <label class="custom-file-label" for="customFile">Выберите главное фото</label>
+            </div>
+            <div class="custom-file">
+                {{ form.img1 }}
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <div class="custom-file">
+                {{ form.img2 }}
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <div class="custom-file">
+                {{ form.img3 }}
+                <label class="custom-file-label" for="customFile">Выберите фото</label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Сохранить</button>
+        </form>
+    </div>
+{% endblock %}
