--- a/my_food/templates/my_food/recipe.html
+++ b/my_food/templates/my_food/recipe.html
@@ -2,12 +2,17 @@
 {% block title %} My_food - {{ recipe.title }} {% endblock %}
 {% block content %}
     <div class="content">
-        <h1>{{ recipe.title }}</h1>
+        <div>
+            {% if user == recipe.author %}<a href="{% url 'edit_recipe' recipe_id=recipe.id %}">Редактировать</a>
+
+            {% endif %}
+            <h1>{{ recipe.title }}</h1>
+        </div>
         <div class="ingredients">
             <img class="img-thumbnail" src="{{ MEDIA_URL }}{{ recipe.img_main.url }}" style="width: 200px; height: 200px;">
         </div>
         <div>
-            <h4>Ингридиенты:</h4>
+            <h4>Ингредиенты:</h4>
             <p> {{ recipe.ingredients }}</p>
         </div>
         <div class="ingredients-h3">
