--- a/my_food/templates/my_food/base.html
+++ b/my_food/templates/my_food/base.html
@@ -96,12 +96,22 @@
         .your_recipes{
             margin-top: 5%;
         }
+        .row h3{
+            margin-left: 10%;
+            margin-top: -7%;
+        }
+        .row button{
+            width: 100%;
+        }
+        .box-shadow{
+            padding: 8%;
+        }
     </style>
 </head>
 <body background="{% static 'my_food/background.png' %}">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">My_food</a>
+    <a class="navbar-brand" href="{% url 'index' %}">My_food</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
