--- a/my_food/templates/my_food/index.html
+++ b/my_food/templates/my_food/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>My_food</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
+
+    <!--<style>
         #div_index{
             background-color: darkgray;
         }
@@ -22,8 +23,37 @@
             width: 80%;
             margin: 4% 4% 4% 10%;
         }
+    </style>-->
+    <style>
+        /* Carousel base class */
+        .carousel {
+          margin-bottom: 4rem;
+        }
+        /* Since positioning the image, we need to help out the caption */
+        .carousel-caption {
+          bottom: 3rem;
+          z-index: 10;
+        }
+
+        /* Declare heights because of positioning of img element */
+        .carousel-item {
+          height: 32rem;
+          background-color: #777;
+        }
+        .carousel-item > img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          min-width: 100%;
+          height: 32rem;
+        }
+        .back-index{
+            background-color: white;
+            padding: 1.3%;
+        }
     </style>
 </head>
+<!--
 <body id="div_index">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -56,4 +86,154 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+-->
+
+<body data-gr-c-s-loaded="true" background="{% static 'my_food/background.png' %}">
+{% if authentication %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="{% url 'index' %}">My_food</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'prof' %}">Профиль<span class="sr-only">(current)</span></a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'edit_food' %}">Мои продукты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'recipes' %}">Рецепты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_recipe' %}">Добавить рецепт</a>
+        </li>
+      </ul>
+    </div>
+        <a href="{% url 'logout' %}"><button class="btn btn-outline-info my-2 my-sm-0" type="submit">Выход</button></a>
+  </nav>
+{% else %}
+<ul class="nav justify-content-end back-index">
+  <li class="nav-item">
+    <a class="nav-link active" href="{% url 'login' %}">Вход</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'signup' %}">Регистрация</a>
+  </li>
+</ul>
+{% endif %}
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide" src="{% static 'my_food/first_slide2.png' %}" data-holder-rendered="true">
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <h1>Ведите учет продуктов</h1>
+                <p>Добавляйте купленные продукты и удаляйте потраченные для получение предложений по приготовлению пищи из имеющихся у вас на данный момент продуктов</p>
+              </div>
+        </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide" src="{% static 'my_food/second_slide2.png' %}" data-holder-rendered="true">
+        <div class="container">
+              <div class="carousel-caption">
+                <h1>Просматривайте предложенные блюда</h1>
+                <p>Выбирайте только из тех рецептов, ингредиенты для которых у вас уже есть</p>
+              </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=555&amp;fg=333&amp;text=Third slide" alt="Third slide" src="{% static 'my_food/third_slide1.png' %}" data-holder-rendered="true">
+        <div class="container">
+              <div class="carousel-caption text-right">
+                <h1>Добавляйте собственные рецепты</h1>
+                <p>Поделитесь с другими своими секретами приготовления пищи и храните все свои рецепты в удобном месте</p>
+                  {% if authentication == False %}
+                <p><a class="btn btn-lg btn-primary" href="{% url 'signup' %}" role="button">Регистрация</a></p>
+                  {% endif %}
+              </div>
+            </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <main role="main">
+
+      <!-- Marketing messaging and featurettes
+      ================================================== -->
+      <!-- Wrap the rest of the page in another container to center all the content. -->
+
+      <div class="container marketing">
+
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">Учет продуктов <span class="text-muted"> - всегда знайте, что у вас есть, а что еще нужно купить</span></h2>
+            <p class="lead">Ведите учет своих продуктов, добавляя и удаляя их нажатием одной кнопки мыши. Подбор рецептов не зависит от регистра добавляемых названий продуктов.</p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="{% static 'my_food/img1.jpg' %}" data-holder-rendered="true">
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">Выбор рецепта <span class="text-muted"> - только те, которые не требуют дополнительных покупок</span></h2>
+            <p class="lead">Если не знаете, что приготовить, то выбор только из тех рецептов, которые вы можете приготовить в данный момент, поможет определиться с выбором блюда.</p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="{% static 'my_food/img2.jpg' %}" data-holder-rendered="true" style="width: 500px; height: 500px;">
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">Добавляйте собственные рецепты <span class="text-muted"> - храните всё в удобном месте и делитесь своими секретами</span></h2>
+            <p class="lead">Все ваши рецепты в одном месте. Также другие пользователи смогут увидеть и приготовить блюдо по вашему рецепту, посоветовать что-то или просто поблагодарить в комментариях.</p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="{% static 'my_food/img3.jpg' %}" data-holder-rendered="true" style="width: 500px; height: 500px;">
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- /END THE FEATURETTES -->
+
+      </div><!-- /.container -->
+
+
+      <!-- FOOTER -->
+      <footer class="container">
+        <p>© Веденин Вадим, 2018</p>
+      </footer>
+    </main>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs><style type="text/css"></style></defs><text x="0" y="25" style="font-weight:bold;font-size:25pt;font-family:Arial, Helvetica, Open Sans, sans-serif">500x500</text></svg></body>
 </html>
