--- a/my_food/templates/my_food/index.html
+++ b/my_food/templates/my_food/index.html
@@ -203,7 +203,7 @@
             <p class="lead">Если не знаете, что приготовить, то выбор только из тех рецептов, которые вы можете приготовить в данный момент, поможет определиться с выбором блюда.</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="{% static 'my_food/img22.jpg' %}" data-holder-rendered="true" style="width: 500px; height: 500px;">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="{% static 'my_food/img2.JPG' %}" data-holder-rendered="true" style="width: 500px; height: 500px;">
           </div>
         </div>
 
