static and cloudinary

--- a/my_food/templates/my_food/prof.html
+++ b/my_food/templates/my_food/prof.html
@@ -15,8 +15,8 @@
 
         <h1 class="h3 mb-3 font-weight-normal">Статистика </h1>
         <p>Добавлено рецептов: {{ kol_of_recipes }}</p>
-        <p>Количестов продуктов: {{ kol_of_ingredients }}</p>
-        <p>Оставленно комментариев: {{ kol_of_comments }}</p>
+        <p>Количество продуктов: {{ kol_of_ingredients }}</p>
+        <p>Оставлено комментариев: {{ kol_of_comments }}</p>
 
 
         <h1 class="h3 mb-3 font-weight-normal your_recipes">Ваши рецепты </h1>
