--- a/my_food/templates/my_food/index.html
+++ b/my_food/templates/my_food/index.html
@@ -142,7 +142,7 @@
         </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide" src="{% static 'my_food/second_slide2.png' %}" data-holder-rendered="true">
+          <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide" src="{% static 'my_food/second_slide2.jpg' %}" data-holder-rendered="true">
         <div class="container">
               <div class="carousel-caption">
                 <h1>Просматривайте предложенные блюда</h1>
