--- a/my_food/templates/my_food/base.html
+++ b/my_food/templates/my_food/base.html
@@ -45,10 +45,10 @@
             margin-bottom: 6%;
         }
         .center{
-            margin: auto;
+            height: 200px;
         }
         .center img{
-            margin: 0 6% 20% 0;
+            margin: 0 6% 0 0;
         }
         .ing{
             margin: 4% 14% 20% 14%;
@@ -80,6 +80,7 @@
         }
         .comment{
             clear: both;
+            margin-top: 24%;
         }
         .comment label{
             font-size: 18pt;
